# loggerpal

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SECURITY.md  config.cfg  docker-compose.yml
src/: main.c
src/config/: bootstrap.c  bootstrap.h
src/connection/: server.c  server.h
src/headCache/: headCache.c  headCache.h
src/http/: httpServer.c  httpServer.h  mongoose.c  mongoose.h
src/models/: atom.c  atom.h  plugin.h
src/plugin/: pluginRegistry.c  pluginRegistry.h  pluginWatcher.c  pluginWatcher.h
src/queue/: zmqConnection.c  zmqConnection.h  zmqPublish.c  zmqPublish.h  zmqReply.c  zmqReply.h
src/utils/: colors.h  debug.c  debug.h  timeUtils.c  timeUtils.h
